--- a/wangxue/index.html
+++ b/wangxue/index.html
@@ -15,23 +15,29 @@
     let c = 0.03;
 
     // 计算今年的总天数
-    const now = new Date();
-    const startOfYear = new Date(now.getFullYear(), 0, 1);
-    const endOfYear = new Date(now.getFullYear() + 1, 0, 1);
+    const startOfYear = new Date(new Date().getFullYear(), 0, 1);
+    const endOfYear = new Date(new Date().getFullYear() + 1, 0, 1);
     const oneDay = 24 * 60 * 60 * 1000; // 一天的毫秒数
     const totalDaysThisYear = Math.round((endOfYear - startOfYear) / oneDay);
 
-    // 计算当前日期减去b的天数
     const bDate = new Date(b);
-    const daysSinceB = Math.round((now - bDate) / oneDay);
 
-    // 根据提供的逻辑计算展示的值
-    const displayValue = a + ((a * c) / totalDaysThisYear) * daysSinceB;
+    function updateDisplayValue() {
+        const now = new Date();
+        // 计算当前日期减去b的天数
+        const daysSinceB = (now - bDate) / oneDay;
 
-    console.log(`存入初始值:${a}, 存储日期:${b} ,增长比例:${c}`)
-    console.log(`今年总天数:${totalDaysThisYear}`)
-    // 展示结果
-    document.getElementById('numberDisplay').innerText = displayValue.toFixed(2);
+        // 根据提供的逻辑计算展示的值
+        const displayValue = a + ((a * c) / totalDaysThisYear) * daysSinceB;
+
+        // 展示结果
+        document.getElementById('numberDisplay').innerText = displayValue.toFixed(6);
+    }
+
+    // 初始化渲染一次
+    updateDisplayValue();
+    // 每秒更新一次displayValue的值
+    setInterval(updateDisplayValue, 1000);
 </script>
 </body>
 </html>
