--- a/wangxue/index.html
+++ b/wangxue/index.html
@@ -10,8 +10,8 @@
     </div>
 </div>
 <script>
-    let a = 12057;
-    let b = "2024-04-08";
+    let a = 12057.79;
+    let b = "2024-04-08 15:39:00";
     let c = 0.03;
 
     // 计算今年的总天数
