--- a/wangxue/index.html
+++ b/wangxue/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div style="width: 100vw">
-    <div id="numberDisplay" style="width: 16rem;color: #a72e58;margin: 45vh auto;font-size: 100px">计算中...
+    <div id="numberDisplay" style="width: 500px;color: #a72e58;margin: 40vh auto;font-size: 100px">计算中...
     </div>
 </div>
 <script>
