--- a/wangxue/index.html
+++ b/wangxue/index.html
@@ -18,7 +18,8 @@
         [-649.43, "2024-07-01 00:00:00"],
         [500, "2024-07-01 00:00:00"],
         [405, "2024-08-01 00:00:00"],
-        [300, "2024-08-02 00:00:00"]
+        [300, "2024-08-02 00:00:00"],
+        [1000, "2024-08-20 10:00:00"]
     ]
 
     // 计算今年的总天数
@@ -34,6 +35,7 @@
         return num + ((num * c) / days) * day
     }
     let total = 0;
+    let principal = 0;
     let last_date = null;
     let is_init = true
 
@@ -57,7 +59,6 @@
         document.getElementById('numberDisplay').innerText = total.toFixed(6);
         last_date = date;
     }
-
     getNowTotal()
     // 每秒更新一次displayValue的值
     setInterval(getNowTotal, 1000);
