--- a/wangxue/index.html
+++ b/wangxue/index.html
@@ -24,6 +24,7 @@
         [1003, "2024-08-20 10:00:00"], // 2024-08-20 存入1000 ➕ 补3块钱
         [2000, "2024-09-14 14:58:00"], // 2024-09-14 存入2000
         [2000, "2024-09-30 13:42:00"], // 存入2000
+        [-2000, "2024-10-15 09:38:00"], // 双十一购物
     ]
     // 计算本金
     let principal = 0;
