--- a/wangxue/index.html
+++ b/wangxue/index.html
@@ -33,13 +33,11 @@
         [2000, "2024-11-15 12:07:00"],
         [2000, "2024-12-07 16:57:00"],
         [2000, "2024-12-12 11:46:00"],
-        [7000, "2024-12-18 17:40:00"]
+        [7000, "2024-12-18 17:40:00"],
+        [1000, "2025-01-16 10:24:00"]
     ]
     // 计算本金
-    let principal = 0;
-    for (let data of datas){
-        principal += data[0]
-    }
+    const principal = datas.reduce((sum, [amount]) => sum + amount, 0);
     document.getElementById('principal').innerText = `本金: ${principal.toFixed(6)}`;
 
     // 计算今年的总天数
