--- a/wangxue/index.html
+++ b/wangxue/index.html
@@ -34,7 +34,8 @@
         [2000, "2024-12-07 16:57:00"],
         [2000, "2024-12-12 11:46:00"],
         [7000, "2024-12-18 17:40:00"],
-        [1000, "2025-01-16 10:24:00"]
+        [1000, "2025-01-16 10:24:00"],
+        [-10000, "2025-01-17 20:28:00"], // 年前囤货取出一万
     ]
     // 计算本金
     const principal = datas.reduce((sum, [amount]) => sum + amount, 0);
