--- a/wangxue/index.html
+++ b/wangxue/index.html
@@ -51,12 +51,13 @@
         [-500, "2025-04-17 00:00:00"],
         [-100, "2025-05-04 00:00:00"],
         [+600, "2025-05-15 00:00:00"],
-        [+2000, "2025-05-16 00:00:00"],
-        [-1000, "2025-06-01 00:00:00"],
+        [+2000, "2025-05-16 00:00:00"],  // 银行卡转账3k, 买鞋抵掉1k
+        [-1000, "2025-06-01 00:00:00"],  // 转账给白云
         [-200, "2025-06-02 00:00:00"],
         [+3000, "2025-06-27 20:22:00"],
-        [+2000, "2025-07-14 20:00:00"],
-        [+3000, "2025-07-16 10:44:00"]
+        [+1000, "2025-07-03 18:46:00"], // 银行卡转账1k
+        [+2000, "2025-07-14 20:10:00"], // 银行卡转账2k
+        [+3000, "2025-07-16 10:43:00"], // 银行卡转账3k, 7-22号核对无误, 结余: 30134(利息480)
     ]
     // 计算本金
     const principal = datas.reduce((sum, [amount]) => sum + amount, 0);
