--- a/wangxue/index.html
+++ b/wangxue/index.html
@@ -58,6 +58,7 @@
         [+1000, "2025-07-03 18:46:00"], // 银行卡转账1k
         [+2000, "2025-07-14 20:10:00"], // 银行卡转账2k
         [+3000, "2025-07-16 10:43:00"], // 银行卡转账3k, 7-22号核对无误, 结余: 30134(利息480)
+        [-1000, "2025-07-31 00:00:00"], // 还花呗
     ]
     // 计算本金
     const principal = datas.reduce((sum, [amount]) => sum + amount, 0);
