--- a/wangxue/index.html
+++ b/wangxue/index.html
@@ -60,6 +60,7 @@
         [+3000, "2025-07-16 10:43:00"], // 银行卡转账3k, 7-22号核对无误, 结余: 30134(利息480)
         [-1000, "2025-07-31 00:00:00"], // 还花呗
         [+1000, "2025-08-07 00:00:00"], // 微信转账1k
+        [+3000, "2025-08-18 13:10:00"], // 银行卡转账3k
     ]
     // 计算本金
     const principal = datas.reduce((sum, [amount]) => sum + amount, 0);
